--- a/css/main.css
+++ b/css/main.css
@@ -131,7 +131,8 @@
           border-radius: 0.3rem;
           padding: 1rem;
           margin-bottom: 1rem;
-          border: 1px solid #2d2d2d;
+          border: 1px solid lightgray;
+          color: gray;
         }
         .fly-button{
             position:fixed;
@@ -143,7 +144,7 @@
             /* color:#FFF; */
             border-radius:50px;
             text-align:center;
-            box-shadow: 2px 2px 2px #999;
+            /* box-shadow: 2px 2px 2px #999; */
         }
         
         .fly-position{
