--- a/css/main.css
+++ b/css/main.css
@@ -131,7 +131,8 @@
           border-radius: 0.3rem;
           padding: 1rem;
           margin-bottom: 1rem;
-          border: 1px solid lightgray;
+          /* border: 1px solid #fc2d2d; */
+          background-color: rgba(0, 0, 0, 0.89);
           color: gray;
         }
         .fly-button{
