updated css for smooth scrolling experience

--- a/css/main.css
+++ b/css/main.css
@@ -151,4 +151,18 @@
             margin-top:22px;
         }
         
+        .cases_div, .respone-wall,.contact-ncdc,.updates,.hide-wall{
+            position: relative;
+            display: flex;
+            justify-content: space-around;
+            align-items: center;
+            flex-wrap: wrap;
+            flex-direction: row;
+            width: 100%;
+            height: 100%;
+        }
+        html{
+            scroll-behavior: smooth;
+        }
+        
         
