Bot visible, worked on language translation

--- a/css/main.css
+++ b/css/main.css
@@ -1,3 +1,4 @@
+/* Copyright. All Rights Reserved */
         .front {
             background-image: url("../images/dash.jpg");
             background-repeat: no-repeat;
