--- a/css/covidbot.css
+++ b/css/covidbot.css
@@ -4,7 +4,7 @@
 html, body {
 	font-size: 16px;
 }
-
+/* Copyright. All Rights Reserved */
 section#demo {
 	background: #fbfbfb;
     position: relative;
@@ -23,4 +23,8 @@ section#demo {
 	background: #fff;
     box-shadow: 13px 13px 28px 2px rgba(0, 0, 0, 0.035);
     padding: 7px 15px;
+}
+#userInput {
+	font-weight: 600;
+	color: #fc2d2d;
 }
