New dashboard, new case outputs, handwash prompt added

--- a/css/main.css
+++ b/css/main.css
@@ -161,4 +161,9 @@
             background-size: cover;
             /* opacity: 0.2; */
         }
+        .dashboard {
+            background-image: url('../images/dashboard.jpg');
+            background-repeat: no-repeat;
+            background-size: cover;
+        }
         
